export const snapshot = {};

snapshot[`typegraphs creation 1`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_20",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 20,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_float_enum": 7,
' +
  '          "a_struct": 8,
' +
  '          "nested": 10,
' +
  '          "nested_with_ref": 15,
' +
  '          "an_email": 19
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1.5",
' +
  '          "2.5"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 11,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          13,
" +
  "          14
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 16,
' +
  '          "two": 18
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 17,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 15,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "format": "email"
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_19",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 2`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1WzW7bMAzO2U9BuBcbcFzbCXLw5l7WHQq0WND9YLdCsZVEmC0Zkow2C/wme5u92CgrP06wrRiGdliRD0gskdRHihJpq1yyWqtzvZSUhloNngARYjIed0/E8TMaT0aDGP/jKImSkZHHyWgcD6LBM6BRmkiAwd/ieHP/Cc7P4Y2oV5ItlhpuqCZ6VVN49/1bACXLKVe0gIYXVIJeUnhbEqVZDtdWBUkYhQ5SvJ9efh5uhMOrgnLN5ozKdLtgiIaOw7imck5yCh/MbbvidaNh7QDMUuBNNaPyFU7IftI6Dn2ohdQwb3iumeDQ3VMPzdZAAphBm/bIAiNHyRpygb4edAq3NBeyeK20ZHwR4Fa+cHHPL6ANHD/tnJO+814kbaeVVDeS77yZmAYvCYpVdUnDejV4OjxS//FkkhzXP06jU/0/A87+pPxvxFdWlgSmzazsdYFPVCpTm103OPt1M7iZXttGMJeiAuNpIUm9vONYqYD30BQ61qgO9rqfmYayQcqKqhC5xXbhJY5vrcJxCGSgQ9NvFlR6vuOouJNgG2hy7a1d4qamot0ZPveGFeNZnPgtLpgdMFhFABV5yMYjVDcKU3LAyIoDKh/Ja6F0J5R07rlTM/PbADipaOZ+RAYXmYzRo0yk0Ush91x28Y7LUjvOPdPLfbI8q9RU6aERKtcHosB0VEVT7G0AXQKzfu4wWUZR2xPOYBFOBY5WoZVs1F0n56TsG2xlJt3GxvrxurGB4DQz/kLTyz0VYz8NsE8XGKLnQ3YBceL6odnCXd0xeltGP9iR6HvRIzGnEIDJ4I7JiDo2bw2sSMGcWndYrX/EvuPcJiLcKFycrFzMug1rTkpFXX9n3o/GvHlsPPYW3nX7Mr9N7o0BUlWiaEqcq6Ovrd+FZBN+7NZ/Wa+fE0444R/iB2//lUgADgAA"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 3`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-complex-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "test": 1
' +
  "        },
" +
  '        "required": [
' +
  '          "test"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_20",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 20,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_18",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a_string": 3,
' +
  '          "a_float": 4,
' +
  '          "an_enum": 5,
' +
  '          "an_integer_enum": 6,
' +
  '          "a_float_enum": 7,
' +
  '          "a_struct": 8,
' +
  '          "nested": 10,
' +
  '          "nested_with_ref": 15,
' +
  '          "an_email": 19
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_5",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 1.0,
' +
  '        "multipleOf": 2.0
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "\\\\"one\\\\"",
' +
  '          "\\\\"two\\\\""
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1",
' +
  '          "2"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "enum": [
' +
  '          "1.5",
' +
  '          "2.5"
' +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "value": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "number",
' +
  '        "title": "number_10",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_16",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 11,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_15",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "either",
' +
  '        "title": "either_14",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "oneOf": [
' +
  "          13,
" +
  "          14
" +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_12",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 16,
' +
  '          "two": 18
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "array",
' +
  '        "title": "array_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "items": 17,
' +
  '        "minItems": 3
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "optional",
' +
  '        "title": "optional_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "item": 15,
' +
  '        "default_value": null
' +
  "      },
" +
  "      {
" +
  '        "type": "string",
' +
  '        "title": "string_17",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "format": "email"
' +
  "      },
" +
  "      {
" +
  '        "type": "boolean",
' +
  '        "title": "boolean_19",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>true;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 1
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;

snapshot[`typegraphs creation 4`] = `
"[
" +
  "  {
" +
  '    "\$id": "https://metatype.dev/specs/0.0.2.json",
' +
  '    "types": [
' +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "test-types",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "one": 1,
' +
  '          "two": 6,
' +
  '          "three": 11
' +
  "        },
" +
  '        "required": [
' +
  '          "one",
' +
  '          "two",
' +
  '          "three"
' +
  "        ]
" +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_9",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          0
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 5,
' +
  '        "materializer": 0,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_2",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "a": 3,
' +
  '          "b": 4
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_0",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_1",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_3",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "minimum": 12,
' +
  '        "maximum": 43
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_11",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          1
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 7,
' +
  '        "output": 9,
' +
  '        "materializer": 2,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_6",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 8,
' +
  '          "post": 9
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_4",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "object",
' +
  '        "title": "object_8",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "properties": {
' +
  '          "id": 10,
' +
  '          "author": 7
' +
  "        },
" +
  '        "required": []
' +
  "      },
" +
  "      {
" +
  '        "type": "integer",
' +
  '        "title": "integer_7",
' +
  '        "runtime": 0,
' +
  '        "policies": [],
' +
  '        "config": {},
' +
  '        "as_id": false
' +
  "      },
" +
  "      {
" +
  '        "type": "function",
' +
  '        "title": "func_13",
' +
  '        "runtime": 0,
' +
  '        "policies": [
' +
  "          2
" +
  "        ],
" +
  '        "config": {},
' +
  '        "as_id": false,
' +
  '        "input": 2,
' +
  '        "output": 2,
' +
  '        "materializer": 4,
' +
  '        "rate_weight": null,
' +
  '        "rate_calls": false
' +
  "      }
" +
  "    ],
" +
  '    "materializers": [
' +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>12;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=(_,{context})=>context.provider===\\\\"internal\\\\";"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=user=>({id:12,user});"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "script": "var _my_lambda=()=>false;"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "import_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "mod": 5,
' +
  '          "name": "three",
' +
  '          "secrets": []
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "module",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "code": "file:scripts/three.ts;base64:H4sIAAAAAAAA/+1WUWvbMBD2s3/F4ScbHMd2Qh/ctQzWPRQ2VroN9qrYSmIWS0Y6k4Tgf7J/sz+2k5y4bjq2wWhga44ktu5O33e600nRuSpr1GNcKs4j1M4zSExyMZ3aJ8nxM55eTJyEfpM4jdOJ0SfpZJo4sXMCaTQyBeD8rRwv7h+R8RjeyHqrysUS4T1Hhtuaw4fv30JYlTkXmhfQiIIrwCWHtyumsczhXWeCNIojlyA+3t18Ge2Vo9uCCyznJVfZYcKIHF23FMjVnOUcPpnddivqBmHnAswyEE014+qSBuxh0Lou39RSIcwbkWMpBdh96pPbDlgIM2izAVho9KTZQS6Ja4MZ3PNcquKVRlWKRUhL+SrkWlxDG7pBZsnZkHwQSWutimOjRM9mYnL+J9FlVa+eq/H38pv+T+Nketz/9Hpx7v8TyEn7v7K9vANqRKQPMS0Uq5fQwlzJCrzXvWpMGHKsVT6uZEG707t8mH1DpvuGKCr+y5mq89FW02G4dC5oBAZXgJE5jhZc+UGv14k10GHR5Oh3PZ8NPHdQlSKDJIU2oE8/b/YIr/cKoWKbDKaToW+jKZdDFjpkymLIEphjrJYajbJWcrP1vTsaemRoQ0qAYBXPwPtMSN4Q2sz5A2jW4FJSbUwkjxEtS4fY59P3kGscmbH2QvDNgax5AFfX9nzsmE2GiVnw9bA6JrMHj7oxSVpEd5K21TaiIT2HDvZyEGw19DrobIkAOmq7LAApKGJbWXM3+DqhWoXQ2QxmYRbk2ziT1Autvg2idYnLDt0/oAedEddyCGizY1P6FNXYLDLV2iTYlNrWtQ1+ymRR6+7do8GWErmPbc5WmnvBIQZzle2j6Pa7v6em9T156+tmpxEm9UqzMgp99K/OM/edmfIoLCqC5TUFN1/nLGc5y1nO8mLkB4tOvlAAEAAA"
' +
  "        }
" +
  "      },
" +
  "      {
" +
  '        "name": "predefined_function",
' +
  '        "runtime": 0,
' +
  '        "effect": {
' +
  '          "effect": "none",
' +
  '          "idempotent": true
' +
  "        },
" +
  '        "data": {
' +
  '          "name": "true"
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "runtimes": [
' +
  "      {
" +
  '        "name": "deno",
' +
  '        "data": {
' +
  '          "worker": "default",
' +
  '          "permissions": {}
' +
  "        }
" +
  "      }
" +
  "    ],
" +
  '    "policies": [
' +
  "      {
" +
  '        "name": "__internal",
' +
  '        "materializer": 1
' +
  "      },
" +
  "      {
" +
  '        "name": "deny",
' +
  '        "materializer": 3
' +
  "      },
" +
  "      {
" +
  '        "name": "__public",
' +
  '        "materializer": 6
' +
  "      }
" +
  "    ],
" +
  '    "meta": {
' +
  '      "prefix": null,
' +
  '      "secrets": [],
' +
  '      "queries": {
' +
  '        "dynamic": true,
' +
  '        "endpoints": []
' +
  "      },
" +
  '      "cors": {
' +
  '        "allow_origin": [],
' +
  '        "allow_headers": [],
' +
  '        "expose_headers": [],
' +
  '        "allow_methods": [],
' +
  '        "allow_credentials": false,
' +
  '        "max_age_sec": null
' +
  "      },
" +
  '      "auths": [],
' +
  '      "rate": null,
' +
  '      "version": "0.0.2"
' +
  "    }
" +
  "  }
" +
  "]"
`;
